# segregated-op-return

./: .gitignore  README.md  segop_send.sh  segop_src_v1_snapshot.tgz
segop/: README.md
segop/buds/: segop-buds-registry-v2.json
segop/docs/: bip.md  rpc-helper-reference.md  segop-buds-integration.md  segop-pruning-regtest-notes.md  spec.md
segop/lab/examples/blob/: small_blob_deadbeef.tlv
segop/lab/examples/json/: rollup_header_example.md  simple_object.md  simple_object.tlv
segop/lab/examples/text/: buds_t1_textnote.md  buds_t1_textnote.tlv  (+3 more)
segop/lab/frontend/: package-lock.json  package.json
segop/lab/scripts/: README.md  gen_tlv.py  lab_env_init.sh
segop/lab/tests/: ENV_SETUP.md  GENERATING_FIXTURES.md  README.md  test01_basic_segop_text.py
src/: CMakeLists.txt  core_write.cpp  init.cpp
src/consensus/: tx_check.cpp
src/primitives/: transaction.cpp  transaction.h  transaction_identifier.h
src/rpc/: client.cpp  rawtransaction.cpp
src/segop/: CMakeLists.txt  buds.cpp  buds.h  segop.cpp  segop.h  segop_buds_classify.cpp  segop_buds_classify.h  segop_buds_registry.cpp  segop_buds_registry.h  segop_extract_surfaces.cpp  segop_extract_surfaces.h  segop_prune.cpp  segop_prune.h
src/wallet/rpc/: spend.cpp  spend.cpp.save  wallet.cpp
src_v1/: filelist.txt  filelist_tracked.txt  filelist_untracked.txt
src_v1/src/: CMakeLists.txt  core_read.cpp  core_write.cpp
src_v1/src/consensus/: consensus.h  tx_check.cpp
src_v1/src/primitives/: transaction.cpp  transaction.h
src_v1/src/rpc/: rawtransaction.cpp
src_v1/src/segop/: segop.cpp
(+102 files in other folders)
